fix: change color for scrollbar

--- a/src/main.scss
+++ b/src/main.scss
@@ -15,7 +15,6 @@
 
 ::-webkit-scrollbar-track {
   border-radius: 8px;
-  background-color: #e7e7e7;
-  border: 1px solid #cacaca;
+  background-color: #be56ff3c;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
